# automated_ncaa_bb_bracket

./: .gitignore  .mcp.json  Automated_Bracket_Seeding_with_Python_and_Pandas.py  Bracket Metrics.ipynb  MetricComparison.ipynb  README.md  Running the Code.ipynb  bracket_pdf.py  bracket_picker.py  bracket_template.xlsx  main.py  masseyratings.csv  metrics.py  pyproject.toml  requirements.txt  scrape.py
csv_files/: bpi_20190318.csv  dokent_20190318.csv  kenpom.csv  names_massey-bpi.csv  names_massey-dokter.csv  names_massey-kenpom.csv
notebooks/: Running the Code.ipynb
