[project]
name = "automated-ncaa-bb-bracket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyterlab>=4.5.6",
    "l6e>=0.2.0",
    "lxml",
    "numpy>=2.4.3",
    "openpyxl",
    "pandas",
    "requests",
    "reportlab",
    "selenium",
    "playwright",
]
